--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,10 +20,12 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+   font-family: fantasy;
  }
 
+ /*ヘッダー*/
  header {
-   background-color: blanchedalmond;
+   background-color: #EEE8AA;
    height: 100px;
  }
 
@@ -41,3 +43,81 @@
      float: left;
    }
  }
+
+ /*フッター*/
+ /*.wrapper{
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 120px;
+  box-sizing: border-box;
+}*/
+
+/*footer{
+  
+  width: 100%;
+  background-color: olive;
+  color: white;
+  text-align: center;
+  padding: 30px 0;
+  position: absolute;
+  bottom: 0;
+}*/
+
+footer {
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  background-color: olive;
+  color: white;
+  text-align: center;
+  margin-top: auto;
+}
+
+ /*投稿フォーム*/
+ .field {
+   margin-bottom: 20px;
+ }
+
+ .sub-post-text {
+  position: relative;
+  margin: 2em 0 2em 40px;
+  padding: 8px 15px;
+  background: #fff0c6;
+  border-radius: 30px;
+}
+.sub-post-text:before{font-family: FontAwesome;
+  content: "\f111";
+  position: absolute;
+  font-size: 15px;
+  left: -40px;
+  bottom: 0;
+  color: #fff0c6;
+}
+.sub-post-text:after{
+  font-family: FontAwesome;
+  content: "\f111";
+  position: absolute;
+  font-size: 23px;
+  left: -23px;
+  bottom: 0;
+  color: #fff0c6;
+}
+.sub-post-text p {
+  margin: 0; 
+  padding: 0;
+}
+
+
+/*投稿一覧*/
+.box1 {
+  padding: 0.5em 1em;
+  margin: 2em 0;
+  color: black;
+  background: #FFFFE0;/*背景色*/
+  border-top: solid 6px #EEE8AA;
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32);/*影*/
+}
+.box1 p {
+  margin: 0; 
+  padding: 0;
+}
