--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,9 @@
 
-<h2>投稿一覧</h2>
   <% @posts.each do |post| %>
 
-  
+  <div class="col-xs-8">
   <div class="box1">
-  <table class="table">
+  <table style="border:none;">
   <tr>
     <td>
       <%= post.user.name %>
@@ -49,14 +48,16 @@
   </tr>
   </table>
   </div>
-  
+    
+  </div>
 
   <% end %>
 
 
-
-  <%= link_to new_post_path do %>
-  <p class="text-right">
-  <i class="fas fa-plus-circle fa-3x"></i>
-  </p>
-  <% end %>
+  <div class="new-post-form">
+    <%= link_to new_post_path do %>
+      <p class="text-right">
+      <i class="fas fa-plus-circle fa-3x"></i>
+      </p>
+    <% end %>
+  </div>
