--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,32 @@
-<h2>投稿詳細</h2>
+<div class="col-xs-4">
+  <div class="box1">
+    <table style="border:none;">
+      <tr>
+        <td><%= @post.user.name %></td>
+      </tr>
+      <tr>
+        <td><%= @post.user.introduction %></td>
+      </tr>
+      <tr>
+        <td><%= attachment_image_tag @post.user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
+      </tr>
+    </table>
+  </div>
 
+</div>
+
+
+
+
+<div class="col-xs-8">
 <div class="box1">
-  <table class="table">
+  <table style="border:none;">
+
+  <tr>
+    <td>
+      <%= @post.user.name %>
+    </td>
+  </tr>
   <tr>
     <td><%= attachment_image_tag @post.user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
   </tr>
@@ -35,17 +60,24 @@
   </tr>
   </table>
 
-  <%= link_to "編集", edit_post_path %>
-  |
-  <%= link_to "削除", post_path(@post), method: :delete %>
+  <div class="text-left">
+    <%= link_to "一覧へ戻る", posts_path %>
+  </div>
+  <div class="text-right">
+  <% if @post.user_id == current_user.id %>
+    <%= link_to "編集", edit_post_path %>
+    |
+    <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "本当に消しますか？"} %>
+  <% end %>
+  </div>
+</div>
 </div>
   
 
-
-
-
-  <%= link_to new_post_path do %>
-  <p class="text-right">
-  <i class="fas fa-plus-circle fa-3x"></i>
-  </p>
-  <% end %>
+  <div class="new-post-form">
+    <%= link_to new_post_path do %>
+      <p class="text-right">
+      <i class="fas fa-plus-circle fa-3x"></i>
+      </p>
+    <% end %>
+  </div>
