--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,72 +12,111 @@
       </tr>
     </table>
   </div>
-
 </div>
-
-
-
 
 <div class="col-xs-8">
-<div class="box1">
-  <table style="border:none;">
+  <div class="box1">
+    <table style="border:none;">
+      <tr>
+        <td><%= @post.user.name %></td>
+      </tr>
+      <tr>
+        <td><%= attachment_image_tag @post.user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
+      </tr>
+      <tr>
+        <td><%= @post.title %></td>
+      </tr>
+      <tr>
+        <td><%= @post.prefecture %></td>
+      </tr>
+      <tr>
+        <td>
+          <% @post.categories.each do |category| %>
+            <%= category.name %>
+          <% end %>
+        </td>
+      </tr>
+      <tr>
+        <td><%= @post.body %></td>
+      </tr>
+      <tr>
+        <td>
+		      <% if @post.post_images.present? %>
+            <% @post.post_images.each do |image| %>
+              <%= attachment_image_tag image, :image, :fill, 100, 100 %>
+            <% end %>
+          <% end %>
+	     </td>
+      </tr>
+      <tr>
+        <td><%= l @post.created_at %></td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
+      <tr>
+        <td>
+          <% @post.post_comments.each do |post_comment| %>
+            <%= attachment_image_tag post_comment.user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %>
+            <%= post_comment.user.name %>
+            <%= post_comment.comment %>
+            <%= l post_comment.created_at %>
+            <% if post_comment.user == current_user %>
+            <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-danger pull-right" %>
+            <% end %>
+          <% end %>
+        </td>
+      </tr>
+      <tr>
+          <td>
+            <% if @post.favorited_by?(current_user) %>
+              <%= link_to post_favorites_path(@post), method: :delete do %>
+                <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+                <%= @post.favorites.count %>
+              <% end %>
+            <% else %>
+              <%= link_to post_favorites_path(@post), method: :post do %>
+                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                <%= @post.favorites.count %>
+              <% end %>
+            <% end %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <%= link_to post_path(@post.id) do %>
+              <i class="fa fa-comment"></i>
+              <%= @post.post_comments.count %>
+            <% end %>
+          </td>
+        </tr>
+    </table>
 
-  <tr>
-    <td>
-      <%= @post.user.name %>
-    </td>
-  </tr>
-  <tr>
-    <td><%= attachment_image_tag @post.user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
-  </tr>
-  <tr>
-    <td><%= @post.title %></td>
-  </tr>
-  <tr>
-    <td><%= @post.prefecture %></td>
-  </tr>
-  <tr>
-    <td>
-      <% @post.categories.each do |category| %>
-        <%= category.name %>
+    <div class="text-left">
+      <%= link_to "一覧へ戻る", posts_path %>
+    </div>
+    <div class="text-right">
+      <% if @post.user_id == current_user.id %>
+        <%= link_to "編集", edit_post_path %>
+        |
+        <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "本当に消しますか？"} %>
       <% end %>
-    </td>
-  </tr>
-  <tr>
-    <td><%= @post.body %></td>
-  </tr>
-  <tr>
-    <td>
-		  <% if @post.post_images.present? %>
-        <% @post.post_images.each do |image| %>
-          <%= attachment_image_tag image, :image, :fill, 100, 100 %>
-        <% end %>
-      <% end %>
-	 </td>
-  </tr>
-  <tr>
-    <td><%= l @post.created_at %></td>
-  </tr>
-  </table>
-
-  <div class="text-left">
-    <%= link_to "一覧へ戻る", posts_path %>
+    </div>
   </div>
-  <div class="text-right">
-  <% if @post.user_id == current_user.id %>
-    <%= link_to "編集", edit_post_path %>
-    |
-    <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "本当に消しますか？"} %>
-  <% end %>
-  </div>
-</div>
-</div>
   
+  <!--コメント入力欄-->
+  <%= form_with model: [@post, @post_comment] do |f| %>
+    <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+    <%= f.submit "送信", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
+  <% end %>
 
-  <div class="new-post-form">
-    <%= link_to new_post_path do %>
-      <p class="text-right">
+</div>
+
+
+<div class="new-post-form">
+  <%= link_to new_post_path do %>
+    <p class="text-right">
       <i class="fas fa-plus-circle fa-3x"></i>
-      </p>
-    <% end %>
-  </div>
+    </p>
+  <% end %>
+</div>
