--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="col-xs-4">
   <div class="box1">
     <table style="border:none;">
@@ -17,6 +15,7 @@
     <% if @user == current_user %>
       <%= link_to "編集", edit_user_path(@user) %>
     <% end %>
+
   </div>
 </div>
 
@@ -62,15 +61,38 @@
       <tr>
         <td><%= l post.created_at %></td>
       </tr>
+      <tr>
+        <td>
+          <% if post.favorited_by?(current_user) %>
+              <%= link_to post_favorites_path(post), method: :delete do %>
+                <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+                <%= post.favorites.count %>
+              <% end %>
+            <% else %>
+              <%= link_to post_favorites_path(post), method: :post do %>
+                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                <%= post.favorites.count %>
+              <% end %>
+            <% end %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <%= link_to post_path(post.id) do %>
+            <i class="fa fa-comment"></i>
+            <%= post.post_comments.count %>
+          <% end %>
+        </td>
+      </tr>
     </table>
   </div>
   <% end %>
 </div>
 
-  <div class="new-post-form">
-    <%= link_to new_post_path do %>
-      <p class="text-right">
+<div class="new-post-form">
+  <%= link_to new_post_path do %>
+    <p class="text-right">
       <i class="fas fa-plus-circle fa-3x"></i>
-      </p>
-    <% end %>
-  </div>
+    </p>
+  <% end %>
+</div>
