--- a/app/views/relationships/followed.html.erb
+++ b/app/views/relationships/followed.html.erb
@@ -1,3 +1,6 @@
+<h2>フォロワー一覧</h2>
+
+<% if @users.count > 0 %>
 <% @users.each do |user| %>
 
   <div class="col-xs-8">
@@ -25,4 +28,9 @@
       </table>
     </div>
   </div>
+
+<% end %>
+
+<% else %>
+  <p>ユーザーはいません</p>
 <% end %>
