--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,13 +27,22 @@
           </td>
         </tr>
         <tr>
-          <td><%= post.body %></td>
+          <td>
+            <!--4.gsub()で正規表現に合致する箇所を空欄にする-->
+            <%= simple_format(post.body.gsub!(/[#＃][\w\p{Han}ぁ-ヶｦ-ﾟー]+/, "")) %>
+            <!--4.postにタグがあればタグを出力する-->
+            <% if post.hashtags.any? %>
+              <% post.hashtags.each do |hashtag| %>
+                <p>#<%= hashtag.hashname %></p>
+              <% end %>
+            <% end %>
+          </td>
         </tr>
         <tr>
           <td>
 		        <% if post.post_images.present? %>
               <% post.post_images.each do |image| %>
-                <%= attachment_image_tag image, :image, :fill, 100, 100 %>
+                <%= attachment_image_tag image, :image, :fill, 150, 150 %>
               <% end %>
             <% end %>
 	        </td>
