[Add]search&hashtag投稿一覧

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,7 +85,8 @@ footer {
   background: #fff0c6;
   border-radius: 30px;
 }
-.sub-post-text:before{font-family: FontAwesome;
+.sub-post-text:before {
+  font-family: FontAwesome;
   content: "\f111";
   position: absolute;
   font-size: 15px;
