--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -37,7 +37,7 @@
     </div>
     <div class="field row">
       <%= f.label :投稿内容 %>
-      <%= f.text_area :body, class: "form-control" %>
+      <%= f.text_area :body, class: "form-control", placeholder:"＃をつけてハッシュタグ投稿も可能です" %>
     </div>
     <div class="field row">
       <%= f.label :画像選択 %>(複数可能)
