--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,14 @@
               </li>
               <li>
                 <i class="fas fa-search-plus"></i>
-                <%= link_to '検索', "#" %>
+                <% if user_signed_in? %>
+                  <%= form_tag(search_path, method: :get) do %>
+                    <%= text_field_tag 'search[content]' %>
+                    <%= select_tag 'search[model]', options_for_select({"ユーザー" => "user", "投稿内容(タグも可)" => "post", "都道府県" => "prefecture" }) %>
+                    <%= select_tag 'search[method]', options_for_select({"完全一致" => "perfect", "部分一致" => "partial" }) %>
+                    <%= submit_tag '検索' %>
+                  <% end %>
+                <% end %>
               </li>
             <% else %>
               <li>
