--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,28 +1,1 @@
-<% @users.each do |user| %>
-
-  <div class="col-xs-8">
-    <div class="box1">
-      <table style="border:none;">
-        <tr>
-          <td><%= attachment_image_tag user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
-        </tr>
-        <tr>
-          <td>
-            <%= link_to user_path(user) do %>
-            <%= user.name %>
-            <% end %>
-          </td>
-        </tr>
-        <tr>
-          <td><%= user.introduction %></td>
-        </tr>
-        <tr>
-          <td><%= user.follower.count %>フォロー</td>
-        </tr>
-        <tr>
-          <td><%= user.followed.count %>フォロワー</td>
-        </tr>
-      </table>
-    </div>
-  </div>
-<% end %>
+<%= render 'users/index' , users: @users %>
