--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -9,6 +9,7 @@
         <tr>
           <td>
             <%= link_to user_path(user) do %>
+            <i class="fas fa-user"></i>
             <%= user.name %>
             <% end %>
           </td>
