--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -4,7 +4,10 @@
     <div class="box1">
       <table style="border:none;">
         <tr>
-          <td><%= post.user.name %></td>
+          <td>
+            <i class="fas fa-user"></i>
+            <%= post.user.name %>
+          </td>
         </tr>
         <tr>
           <td><%= attachment_image_tag post.user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
@@ -50,7 +53,10 @@
 	        </td>
         </tr>
         <tr>
-          <td><%= l post.created_at %></td>
+          <td>
+            <i class="far fa-calendar-alt"></i>
+            <%= l post.created_at %>
+          </td>
         </tr>
         <tr>
           <td>
