--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,19 @@
 <%= render 'posts/index' , posts: @posts %>
 
-
 <div class="col-xs-4">
+  <div class="box2">
+    <div class="box-title">カテゴリー一覧</div>
+    <ul class="list-category">
+      <% @categories.each do |category| %>
+        <li>
+          <%= link_to category_path(@post, name: category.name) do %>
+            <%= category.name %>
+          <% end %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+
   <div class="box2">
     <div class="box-title">人気投稿ランキング</div>
     <ul class="list_crown">
