--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,10 @@
   <div class="box1">
     <table style="border:none;">
       <tr>
-        <td><%= @user.name %></td>
+        <td>
+          <i class="fas fa-user"></i>
+          <%= @user.name %>
+        </td>
       </tr>
       <tr>
         <td><%= @user.introduction %></td>
@@ -16,8 +19,8 @@
             <%= @user.follower.count %> フォロー
           <% end %>
         </td>
-      </tr>
-      <tr>
+      
+      
         <td>
           <%= link_to followed_path(@user) do %>
             <%= @user.followed.count %> フォロワー
@@ -38,6 +41,22 @@
       <% end %>
     <% end %>
 
+    <!--チャット-->
+    <% unless @user.id == current_user.id %>
+      
+      <% if @isRoom == true %>
+        <p class="user-show-room"><a href="/rooms/<%= @roomId %>" class="btn btn-info">チャットへ</a>
+      <% else %>
+        <%= form_for @room do |f| %>
+          <%= fields_for @entry do |e| %>
+            <%= e.hidden_field :user_id, value: @user.id %>
+          <% end %>
+          <%= f.submit "チャットを始める", class:"btn btn-info user-show-chat"%>
+        <% end %>
+      <% end %>
+      
+    <% end %>
+
   </div>
 </div>
 
@@ -46,7 +65,10 @@
   <div class="box1">
    <table style="border:none;">
       <tr>
-        <td><%= post.user.name %></td>
+        <td>
+          <i class="fas fa-user"></i>
+          <%= post.user.name %>
+        </td>
       </tr>
       <tr>
         <td><%= attachment_image_tag post.user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
@@ -88,7 +110,14 @@
 	     </td>
       </tr>
       <tr>
-        <td><%= l post.created_at %></td>
+        <td>
+          <i class="far fa-calendar-alt"></i>
+          <%= l post.created_at %>
+        </td>
+        <td>
+          <i class="far fa-eye"></i>
+          <%= post.impressionist_count %>
+        </td>
       </tr>
       <tr>
         <td>
