--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,10 +33,10 @@
      padding-top: 10px;
     }
    /*ヘッダー固定*/
-   /*position:fixed;
+   position:fixed;
    top: 0;
-   z-index:9999;*/
-   
+   left: 0;
+   z-index:9999;
  }
 
  nav {
@@ -54,33 +54,28 @@
    }
  }
 
- /*フッター*/
- /*.wrapper{
+/*ヘッダーと重なり阻止*/
+.content {
+  padding-top: 100px;
+}
+
+.wrapper{
   min-height: 100vh;
-  position: relative;
-  padding-bottom: 120px;
-  box-sizing: border-box;
-}*/
+  position: relative;/*←相対位置*/
+  padding-bottom: 120px;/*←footerの高さ*/
+  box-sizing: border-box;/*←全て含めてmin-height:100vhに*/
+}
 
-/*footer{
-  
-  width: 100%;
-  background-color: olive;
-  color: white;
-  text-align: center;
-  padding: 30px 0;
-  position: absolute;
-  bottom: 0;
-}*/
-
-footer {
+footer{
+  /*footerの装飾*/
   width: 100%;
   height: 70px;
-  line-height: 70px;
   background-color: olive;
-  color: white;
+  color: #fff;
   text-align: center;
-  margin-top: auto;
+  padding: 30px 0;
+  position: absolute;/*←絶対位置*/
+  bottom: 0; /*下に固定*/
 }
 
  /*投稿フォーム*/
@@ -216,4 +211,24 @@ footer {
 /*アイコン色*/
 .fas {
   color: #00AA00;
+}
+.far {
+  color: #00AA00;
+}
+
+/*フラッシュ*/
+.alert {
+  color: white;
+  background-color: skyblue;
+  text-align: center;
+  border-radius: 15px;
+}
+
+/*エラーメッセージ*/
+.errors {
+  color: white;
+  background-color: red;
+  text-align: center;
+  border-radius: 15px;
+  margin-top: 5px;
 }
