--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,11 +1,12 @@
 <div class="col-xs-3"></div>
 <div class="col-xs-6"></div>
 
-
-<div class="left-button">
-  <%= link_to "ユーザー一覧へ戻る", users_path, class: "btn btn-info" %>
+<div class="chat-room">
+  <h2 class="text-center">〜チャットルーム〜</h2>
 </div>
-<h4 class="rooms-title">チャットルーム</h4>
+
+<%= link_to "ユーザー一覧へ戻る", users_path, class: "btn btn-info" %>
+
 <% @entries.each do |e| %>
   <div class="user-name">
   <strong>
@@ -32,9 +33,9 @@
           
           <div class="chat-content">
             <% if m.user_id == current_user.id %>
-              <p style="text-align: right;"><%= m.content %></p>
+              <p style="text-right;"><%= m.content %></p>
             <% else %>
-              <p style="text-align: left;"><%= m.content %></p>
+              <p style="text-left;"><%= m.content %></p>
             <% end %>
           </div>
 
