--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,7 +11,7 @@
         <td><%= @post.user.introduction %></td>
       </tr>
       <tr>
-        <td><%= attachment_image_tag @post.user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
+        <td><%= attachment_image_tag @post.user, :profile_image, :fill, 320, 250, format: 'jpg', fallback: "no_image.jpg" %></td>
       </tr>
     </table>
   </div>
@@ -27,7 +27,7 @@
         </td>
       </tr>
       <tr>
-        <td><%= attachment_image_tag @post.user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
+        <td><%= attachment_image_tag @post.user, :profile_image, :fill, 100,100, format: 'jpg', fallback: "no_image.jpg" %></td>
       </tr>
       <tr>
         <td><%= @post.title %></td>
@@ -44,11 +44,33 @@
       </tr>
       <tr>
         <td>
+          <div class="text">
           <%= simple_format(@post.body.gsub!(/[#＃][\w\p{Han}ぁ-ヶｦ-ﾟー]+/, "")) %>
+          </div>
             <% if @post.hashtags.any? %>
               <% @post.hashtags.each do |hashtag| %>
                 <p>#<%= hashtag.hashname %></p>
             <% end %>
+          <% end %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <% if @post.favorited_by?(current_user) %>
+            <%= link_to post_favorites_path(@post), method: :delete do %>
+              <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+              <%= @post.favorites.count %>
+            <% end %>
+          <% else %>
+            <%= link_to post_favorites_path(@post), method: :post do %>
+              <i class="fa fa-heart-o" aria-hidden="true"></i>
+              <%= @post.favorites.count %>
+            <% end %>
+          <% end %>
+
+          <%= link_to post_path(@post.id) do %>
+            <i class="fa fa-comment"></i>
+            <%= @post.post_comments.count %>
           <% end %>
         </td>
       </tr>
@@ -74,14 +96,13 @@
         <% end %>
       </tr>
       <tr>
-        <td></td>
-      </tr>
-      <tr>
         <td>
           <% @post.post_comments.each do |post_comment| %>
-            <%= attachment_image_tag post_comment.user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %>
-            <%= post_comment.user.name %>
-            <%= post_comment.comment %>
+            <%= attachment_image_tag post_comment.user, :profile_image, :fill, 40, 40, format: 'jpg', fallback: "no_image.jpg" %>
+            <%= post_comment.user.name %><br>
+            <div class="text">
+              <%= post_comment.comment %><br>
+            </div>
             <%= l post_comment.created_at %>
             <% if post_comment.user == current_user %>
             <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-danger pull-right" %>
@@ -89,29 +110,6 @@
           <% end %>
         </td>
       </tr>
-      <tr>
-          <td>
-            <% if @post.favorited_by?(current_user) %>
-              <%= link_to post_favorites_path(@post), method: :delete do %>
-                <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-                <%= @post.favorites.count %>
-              <% end %>
-            <% else %>
-              <%= link_to post_favorites_path(@post), method: :post do %>
-                <i class="fa fa-heart-o" aria-hidden="true"></i>
-                <%= @post.favorites.count %>
-              <% end %>
-            <% end %>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <%= link_to post_path(@post.id) do %>
-              <i class="fa fa-comment"></i>
-              <%= @post.post_comments.count %>
-            <% end %>
-          </td>
-        </tr>
     </table>
 
     <div class="text-left">
