--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -4,7 +4,7 @@
     <div class="box1">
       <table style="border:none;">
         <tr>
-          <td><%= attachment_image_tag user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
+          <td><%= attachment_image_tag user, :profile_image, :fill, 40, 40, format: 'jpg', fallback: "no_image.jpg" %></td>
         </tr>
         <tr>
           <td>
