--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
         <td><%= @user.introduction %></td>
       </tr>
       <tr>
-        <td><%= attachment_image_tag @user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
+        <td><%= attachment_image_tag @user, :profile_image, :fill, 320, 250, format: 'jpg', fallback: "no_image.jpg" %></td>
       </tr>
       <tr>
         <td>
@@ -71,7 +71,7 @@
         </td>
       </tr>
       <tr>
-        <td><%= attachment_image_tag post.user, :profile_image_id, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %></td>
+        <td><%= attachment_image_tag post.user, :profile_image, :fill, 40, 40, format: 'jpg', fallback: "no_image.jpg" %></td>
       </tr>
       <tr>
         <td>
